# libdummy

./: .clang-format  CMakeLists.txt
doc/: Numerical limits.md  global-classes.qmodel
include/core/: blocking_layer.hpp  character.hpp  graphic_layer.hpp  graphic_map.hpp  map.hpp  map_level.hpp  project.hpp  starting_point.hpp
include/crypto/: rsa_keypair.hpp  sha512.hpp
include/dummy/core/: account.hpp  blocking_layer.hpp  character.hpp  errors.hpp  foe.hpp  graphic_layer.hpp  layer.hpp  map.hpp  project.hpp  starting_point.hpp
include/dummy/core/character_class/: character_class.hpp  grognard.hpp  sentinelle.hpp  spadassin.hpp
include/dummy/core/spell/: grognard_attack.hpp  sentinelle_attack.hpp  spadassin_attack.hpp  spell.hpp  (+1 more)
include/dummy/local/: event.hpp  event_observer.hpp  floor.hpp  level.hpp  map.hpp  project.hpp
include/dummy/protocol/: bridge.hpp  character.hpp  errors.hpp  incoming_packet.hpp  living.hpp  named_living.hpp  outgoing_packet.hpp  teleport_request.hpp
include/dummy/remote/: map.hpp
include/dummy/server/: abstract_game_server.hpp  account.hpp  errors.hpp  foe.hpp  game_session.hpp  game_session_communicator.hpp  instance.hpp  map.hpp  map_observer.hpp  map_observer_foe.hpp  map_observer_player.hpp  map_state.hpp  player.hpp  project.hpp  server_response_handler.hpp
include/dummy/utils/: dummy_types.hpp  singleton.hpp  utils.hpp
include/local/: level.hpp  map.hpp  project.hpp
include/protocol/: bridge.hpp  character.hpp  character_info.hpp  character_off.hpp  character_position.hpp  errors.hpp  incoming_packet.hpp  living.hpp  map_update.hpp  map_update_manager.hpp  outgoing_packet.hpp  teleport_request.hpp
include/protocol/map_update/: character_floor.hpp  character_off.hpp  character_on.hpp  character_position.hpp  map_update_visitor.hpp  packet_serializer.hpp  update.hpp
include/remote/: map.hpp
include/server/: abstract_game_server.hpp  account.hpp  errors.hpp  game_session.hpp  instance.hpp  map.hpp  map_state.hpp  player.hpp  project.hpp
include/server/command/: command.hpp  command_visitor.hpp  connect_command.hpp  create_character.hpp  get_primary_info_command.hpp  ping.hpp  select_character.hpp  set_position.hpp  teleport_map.hpp
include/server/game_session_state/: initial_state.hpp  loading_state.hpp  manage_characters_state.hpp  playing_state.hpp  send_characters_state.hpp  state.hpp
include/server/response/: characters_list_response.hpp  connect_response.hpp  create_character.hpp  map_update.hpp  ping.hpp  response.hpp  response_visitor.hpp  select_character.hpp  set_position.hpp  teleport_map.hpp
include/utils/: singleton.hpp
src/: utils.cpp
src/core/: account.cpp  blocking_layer.cpp  character.cpp  foe.cpp  graphic_layer.cpp  graphic_map.cpp  map.cpp  map_level.cpp  project.cpp  starting_point.cpp
src/core/character_class/: character_class.cpp  grognard.cpp  sentinelle.cpp  spadassin.cpp
src/core/spell/: grognard_attack.cpp  sentinelle_attack.cpp  spadassin_attack.cpp  spell.cpp  spell.cpp.autosave
src/crypto/: rsa_keypair.cpp  sha512.cpp
src/local/: event.cpp  floor.cpp  level.cpp  map.cpp  project.cpp
src/protocol/: character.cpp  character_off.cpp  character_position.cpp  incoming_packet.cpp  living.cpp  map_update.cpp  map_update_manager.cpp  named_living.cpp  outgoing_packet.cpp  teleport_request.cpp
src/protocol/map_update/: character_floor.cpp  character_off.cpp  character_on.cpp  character_position.cpp  living_off.cpp  living_on.cpp  named_living_on.cpp  packet_serializer.cpp  update.cpp
src/remote/: map.cpp
src/server/: abstract_game_server.cpp  account.cpp  foe.cpp  game_session.cpp  game_session_communicator.cpp  instance.cpp  map.cpp  map_observer.cpp  map_observer_foe.cpp  map_observer_player.cpp  map_state.cpp  player.cpp  project.cpp
src/server/command/: change_character.cpp  connect_command.cpp  create_character.cpp  get_primary_info_command.cpp  message.cpp  ping.cpp  select_character.cpp  set_position.cpp  teleport_map.cpp
src/server/foe/: foe.cpp  map_communicator.cpp
src/server/game_session_state/: initial_state.cpp  loading_state.cpp  manage_characters_state.cpp  playing_state.cpp  send_characters_state.cpp  state.cpp
src/server/response/: change_character.cpp  characters_list_response.cpp  connect_response.cpp  create_character.cpp  map_update.cpp  message.cpp  ping.cpp  response.cpp  select_character.cpp  set_position.cpp  teleport_map.cpp
src/utils/: utils.cpp
tests/: sha512_tests.cpp
tests/core/: character_read_file_tests.cpp  character_tests.cpp  project_tests.cpp
tests/core/testproject/: project.xml
tests/protocol/: incoming_packet_tests.cpp  outgoing_packet_tests.cpp
(+56 files in other folders)
